--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.8",
     "@mui/material": "^5.12.3",
     "@phosphor-icons/react": "github:phosphor-icons/react",
+    "axios": "^1.4.0",
     "json-server": "^0.17.3",
     "phosphor-icons": "^1.4.2",
     "react": "^18.2.0",
